---
source: tests/files.rs
expression: visualization.result
---
@main(v0: int) {
  v3: int = const 0;
  v5: bool = lt v0 v3;
  br v5 .__15__ .__10__;
.__15__:
  v16: int = const 1;
  v13: int = id v16;
  jmp .__19__;
.__10__:
  v11: int = const 0;
  v13: int = id v11;
  jmp .__19__;
.__19__:
  print v13;
}

